tdf#103345 Import decimalEnclosedCircle correctly

Change-Id: I227d149d07ea0f7b2569e5df5a5589834374fac9
Reviewed-on: https://gerrit.libreoffice.org/77992
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>